add enpoint for update to done
